--- a/playbooks/roles/createinstances/tasks/main.yml
+++ b/playbooks/roles/createinstances/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
-- include: dns-config-ready.yml
+- include_vars: group_vars/dynamic
+
 - include: vault.yml
 - include: castle-gate.yml
-- include: courtyard.yml
 - include: kitchen-door.yml
+- include: courtyard.yml
