--- a/playbooks/aws-delete-authorized.yml
+++ b/playbooks/aws-delete-authorized.yml
@@ -6,9 +6,9 @@
   hosts: localhost
   connection: local
   gather_facts: False
-
   roles:
     - deletegroups
     - deletes3bucket
     - deleteiamroles
+    - deleteprivatedns
 
