--- a/playbooks/roles/deleteiamroles/tasks/kitchen-door.yml
+++ b/playbooks/roles/deleteiamroles/tasks/kitchen-door.yml
@@ -3,14 +3,16 @@
   local_action:
     module: command
       aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}{{kitchen_door_name}}-profile --role-name {{tag_prefix}}{{kitchen_door_name}}
+  ignore_errors: True
 
 - name: Delete 'kitchen-door' role
   local_action:
     module: command
       aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{kitchen_door_name}}
+  ignore_errors: True
 
 - name: Delete 'kitchen-door' Instance profile
   local_action:
     module: command
       aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{kitchen_door_name}}-profile
-
+  ignore_errors: True
