--- a/playbooks/roles/deleteiamroles/tasks/vault.yml
+++ b/playbooks/roles/deleteiamroles/tasks/vault.yml
@@ -3,14 +3,16 @@
   local_action:
     module: command
       aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}{{vault_name}}-profile --role-name {{tag_prefix}}{{vault_name}}
+  ignore_errors: True
 
 - name: Delete 'vault' role
   local_action:
     module: command
       aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{vault_name}}
+  ignore_errors: True
 
 - name: Delete 'vault' Instance profile
   local_action:
     module: command
       aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{vault_name}}-profile
-
+  ignore_errors: True
