--- a/playbooks/roles/deleteiamroles/tasks/watch-tower.yml
+++ b/playbooks/roles/deleteiamroles/tasks/watch-tower.yml
@@ -3,14 +3,16 @@
   local_action:
     module: command
       aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}{{watch_tower_name}}-profile --role-name {{tag_prefix}}{{watch_tower_name}}
+  ignore_errors: True
 
 - name: Delete 'watch-tower' role
   local_action:
     module: command
       aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{watch_tower_name}}
+  ignore_errors: True
 
 - name: Delete 'watch-tower' Instance profile
   local_action:
     module: command
       aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{watch_tower_name}}-profile
-
+  ignore_errors: True
