--- a/playbooks/roles/createprivatedns/tasks/dns-config-ready.yml
+++ b/playbooks/roles/createprivatedns/tasks/dns-config-ready.yml
@@ -2,10 +2,10 @@
 - name: Update vpc attribute dns-support
   local_action:
     module: command
-      aws ec2 modify-vpc-attribute --vpc-id "{{vpc_id}}" --enable-dns-support "{\"Value\":true}"
+      aws ec2 modify-vpc-attribute --vpc-id "{{vpc_id}}" --enable-dns-support "{\"Value\":true}" --region "{{aws_region}}"
 
 
 - name: Update vpc attribute dns-hostname
   local_action:
     module: command
-      aws ec2 modify-vpc-attribute --vpc-id "{{vpc_id}}" --enable-dns-hostnames "{\"Value\":true}"
+      aws ec2 modify-vpc-attribute --vpc-id "{{vpc_id}}" --enable-dns-hostnames "{\"Value\":true}" --region "{{aws_region}}"
