--- a/playbooks/roles/creategroups/tasks/kitchen-door.yml
+++ b/playbooks/roles/creategroups/tasks/kitchen-door.yml
@@ -1,6 +1,6 @@
 ---
 # This tasks create a security group {{tag_prefix}}kitchen-door
-# 
+#
 - name: Create 'kitchen-door' security group
   local_action:
     module: ec2_group
@@ -11,9 +11,14 @@
     rules:
       - proto: tcp
         type: ssh
-        from_port: 22
+        from_port: {{ssh_port}}
         to_port: 22
         cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        type: ssh
+        from_port: 2222
+        to_port: 2222
+        group_name: '{{tag_prefix}}{{castle_gate_name}}'
     rules_egress:
       - proto: all
         type: all
