--- a/playbooks/roles/createinstances/tasks/kitchen-door.yml
+++ b/playbooks/roles/createinstances/tasks/kitchen-door.yml
@@ -4,13 +4,13 @@
     module: ec2
     key_name: "{{key_name}}"
     group: "{{tag_prefix}}{{kitchen_door_name}}"
-    instance_type: "{{instance_type}}"
+    instance_type: "t2.small"
     image: "{{ami_id}}"
     region: "{{aws_region}}"
     instance_profile_name: "{{tag_prefix}}kitchen-door-profile"
     volumes:
       - device_name: /dev/sda1
-        volume_size: 8
+        volume_size: 16
         delete_on_termination: true
     wait: yes
     user_data: "{{ lookup('template', '../templates/kitchen-door-cloud-init-script.j2') }}"
