--- a/playbooks/roles/deleteprivatedns/tasks/main.yml
+++ b/playbooks/roles/deleteprivatedns/tasks/main.yml
@@ -1,11 +1,5 @@
-# Delete the hosted zone for internal DNS records
-# XXX Ansbile 2.0 will support this with module route53_zone
+# Bring down all routing information
 
 - include_vars: group_vars/dynamic
-
-- name: Delete hosted zone for internal DNS
-  local_action:
-    module: command
-      aws --region {{aws_region}} route53 delete-hosted-zone --id "{{hosted_zone_id}}"
-  ignore_errors: True
-
+- include: route53.yml
+- include: elastic-ip.yml
