refactor elasticip tasks, fix s3 policy and identities

--- a/playbooks/roles/createelasticip/tasks/main.yml
+++ b/playbooks/roles/createelasticip/tasks/main.yml
@@ -10,3 +10,6 @@
 
 - set_fact:
     elastic_ip: "{{ elasticip.stdout }}"
+
+- lineinfile: "dest=group_vars/dynamic regexp='^web_elastic_ip:' line='web_elastic_ip: {{elastic_ip.PublicIp}}'"
+
