--- a/playbooks/roles/createprivatedns/tasks/main.yml
+++ b/playbooks/roles/createprivatedns/tasks/main.yml
@@ -1,10 +1,6 @@
 ---
 
 - include: route53.yml
-- include: elastic-ip.yml
 
 # Write all dynamic settings that need to be shared amongst playbooks.
-- local_action:
-    module: copy
-    content: "hosted_zone_id: {{hosted_zone_id}}\nweb_elastic_ip: {{elastic_ip.PublicIp}}\n"
-    dest: group_vars/dynamic
+- lineinfile: "dest=group_vars/dynamic regexp='^hosted_zone_id:' line='hosted_zone_id: {{hosted_zone_id}}'"
