updates for Ansible 2.0

--- a/playbooks/aws-create-authorized.yml
+++ b/playbooks/aws-create-authorized.yml
@@ -10,7 +10,9 @@
   vars:
      deployuser: "{{ lookup('env','LOGNAME') }}"
   roles:
+    - dynamicfile
     - keyimport
+    - createvpc
     - creategroups
     - createiamroles
     - creates3bucket
