--- a/playbooks/roles/createiamroles/tasks/main.yml
+++ b/playbooks/roles/createiamroles/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+# IAM roles
+#
+# It seems Ansible does not yet support assume-role-policy-document
+# 2016/03/12: https://github.com/ansible/ansible-modules-core/issues/2468
+# When it does we can use code like so:
+#
+#- name: Create 'kitchen-door' role
+#  local_action:
+#     module: iam
+#     name: "{{tag_prefix}}{{kitchen_door_name}}"
+#     iam_type: role
+#     state: present
+#
+# In the meantime, the following will fail if the roles already exit.
+# They can be deleted through ``deleteiamroles``.
+
 - include: kitchen-door.yml
 - include: castle-gate.yml
 - include: vault.yml
