--- a/playbooks/roles/deleteelasticip/tasks/main.yml
+++ b/playbooks/roles/deleteelasticip/tasks/main.yml
@@ -2,6 +2,6 @@
 - include_vars: group_vars/dynamic
 
 - name: Release elastic IP for the web front
-  ec2_eip: state='present' public_id="{{web_elastic_ip}}"
+  ec2_eip: state='present' public_ip="{{web_elastic_ip}}"
   when: web_elastic_ip is defined
   ignore_errors: True
