--- a/playbooks/roles/deletes3bucket/tasks/main.yml
+++ b/playbooks/roles/deletes3bucket/tasks/main.yml
@@ -2,7 +2,6 @@
 - name: Delete deployutils S3 bucket
   local_action:
     module: s3
-    bucket: "{{tag_prefix}}deployutils"
+    bucket: "{{deployutils_bucket}}"
     mode: delete
   ignore_errors: True
-
