--- a/playbooks/roles/createinstances/tasks/castle-gate.yml
+++ b/playbooks/roles/createinstances/tasks/castle-gate.yml
@@ -1,11 +1,23 @@
 ---
+
+- name: Create 'castle-gate' role
+  local_action:
+    module: command
+      aws --region {{aws_region}} ec2 describe-security-groups --filters Name=group-name,Values='{{tag_prefix}}{{castle_gate_name}}' --query 'SecurityGroups[*].{name:GroupName,id:GroupId}'
+  register: castle_gate_sg_cmd
+
+- set_fact: castle_gate_security_groups="{{castle_gate_sg_cmd.stdout | from_json}}"
+
+- debug: msg="{{castle_gate_security_groups[0].id}}"
+
 - name: Create front-end web server EC2 instances
   local_action:
     module: ec2
-    key_name: "{{key_name}}"
     group: "{{tag_prefix}}{{castle_gate_name}}"
+    vpc_subnet_id: "{{web_subnet_id}}"
+    assign_public_ip: yes
+    key_name: "{{key_name}}"
     instance_type: "{{instance_type}}"
-    assign_public_ip: no
     instance_profile_name: "{{tag_prefix}}{{castle_gate_name}}-profile"
     image: "{{ami_id}}"
     region: "{{aws_region}}"
@@ -33,3 +45,9 @@
     type: A
     value: "{{web_servers.instances[0].private_ip}}"
     overwrite: yes
+
+- debug: msg="{{web_servers.instances[0]}}"
+
+- lineinfile: "dest=group_vars/dynamic regexp='^domain_name:' line='domain_name: {{web_servers.instances[0].public_dns}}'"
+
+- lineinfile: "dest=group_vars/dynamic regexp='^web_device_id:' line='web_device_id: {{web_servers.instances[0].id}}'"
