--- a/playbooks/roles/deletevpc/tasks/main.yml
+++ b/playbooks/roles/deletevpc/tasks/main.yml
@@ -1,10 +1,22 @@
 ---
 # Delete the EC2 VPC
 
+- name: Remove subnet for web servers
+  ec2_vpc_subnet:
+    state: absent
+    vpc_id: {{vpc_id}}
+    cidr: {{web_subnet_cidr}}
+
+- name: Remove subnet for database servers
+  ec2_vpc_subnet:
+    state: absent
+    vpc_id: {{vpc_id}}
+    cidr: {{dbs_subnet_cidr}}
+
 - name: Delete EC2 VPC
   local_action:
      module: ec2_vpc
      state: absent
-     cidr_block: 10.0.0.0/16
+     cidr_block: {{vpc_cidr}}
      resource_tags: { "Environment":"{{tag_prefix}}" }
      region: "{{aws_region}}"
