--- a/playbooks/roles/createvpc/tasks/main.yml
+++ b/playbooks/roles/createvpc/tasks/main.yml
@@ -14,6 +14,8 @@
 - set_fact:
     vpc_id: "{{vpc_data.vpc_id}}"
 
+- lineinfile: "dest=group_vars/dynamic regexp='^vpc_id:' line='vpc_id: {{vpc_id}}'"
+
 - name: Create subnet for database servers
   ec2_vpc_subnet:
     state: present
@@ -34,6 +36,28 @@
       Name: Web Subnet
   register: web_subnet
 
-- lineinfile: "dest=group_vars/dynamic regexp='^vpc_id:' line='vpc_id: {{vpc_id}}'"
-
 - lineinfile: "dest=group_vars/dynamic regexp='^web_subnet_id:' line='web_subnet_id: {{web_subnet.subnet_id}}'"
+
+# Ensure that the VPC has an Internet Gateway.
+- name: Ensure that the VPC has an Internet Gateway
+  ec2_vpc_igw:
+    region: "{{aws_region}}"
+    vpc_id: {{vpc_id}}
+    state: present
+  register: igw
+
+# The Internet Gateway ID is can be accessed
+# via {{igw.gateway_id}} for use in setting up NATs etc.
+
+- name: Set up public subnet route table
+  ec2_vpc_route_table:
+    region: "{{aws_region}}"
+    vpc_id: {{vpc_id}}
+    tags:
+      Name: Public
+    subnets:
+      - "{{ web_subnet.subnet_id }}"
+    routes:
+      - dest: 0.0.0.0/0
+        gateway_id: "{{ igw.gateway_id }}"
+  register: public_route_table
