--- a/playbooks/aws-create-authorized.yml
+++ b/playbooks/aws-create-authorized.yml
@@ -8,7 +8,13 @@
   connection: local
   gather_facts: False
   vars:
-     deployuser: "{{ lookup('env','LOGNAME') }}"
+    - castle_gate: "{{castle_gate_name | default(tag_prefix+'castle-gate')}}"
+    - courtyard: "{{courtyard_name | default(tag_prefix+'courtyard')}}"
+    - kitchen_door: "{{kitchen_door_name | default(tag_prefix+'kitchen-door')}}"
+    - vault: "{{vault_name | default(tag_prefix+'vault')}}"
+    - watch_tower: "{{watch_tower_name | default(tag_prefix+'watch-tower')}}"
+    - dbs_key: "{{dbs_key_name | default(key_name)"
+    - deployuser: "{{ lookup('env','LOGNAME') }}"
   roles:
     - dynamicfile
     - keyimport
