--- a/playbooks/aws-delete-authorized.yml
+++ b/playbooks/aws-delete-authorized.yml
@@ -4,6 +4,12 @@
   hosts: localhost
   connection: local
   gather_facts: False
+  vars:
+    - castle_gate: "{{castle_gate_name | default(tag_prefix+'castle-gate')}}"
+    - courtyard: "{{courtyard_name | default(tag_prefix+'courtyard')}}"
+    - kitchen_door: "{{kitchen_door_name | default(tag_prefix+'kitchen-door')}}"
+    - vault: "{{vault_name | default(tag_prefix+'vault')}}"
+    - watch_tower: "{{watch_tower_name | default(tag_prefix+'watch-tower')}}"
   roles:
     - deletegroups
     - deleteiamroles
