--- a/playbooks/roles/creategroups/tasks/main.yml
+++ b/playbooks/roles/creategroups/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Create 'castle-gate' security group
   local_action:
      module: ec2_group
-     name: "{{tag_prefix}}{{castle_gate_name}}"
+     name: "{{castle_gate}}"
      vpc_id: "{{vpc_id}}"
      description: "Web facing services"
      region: "{{aws_region}}"
@@ -15,7 +15,7 @@
 - name: Create 'kitchen-door' security group
   local_action:
     module: ec2_group
-    name: "{{tag_prefix}}{{kitchen_door_name}}"
+    name: "{{kitchen_door}}"
     vpc_id: "{{vpc_id}}"
     description: "Monitoring services"
     region: "{{aws_region}}"
@@ -27,7 +27,7 @@
       - proto: tcp
         from_port: 2222
         to_port: 2222
-        group_name: '{{tag_prefix}}{{castle_gate_name}}'
+        group_name: '{{castle_gate}}'
     rules_egress:
       - proto: all
         cidr_ip: 0.0.0.0/0
@@ -35,7 +35,7 @@
 - name: Update 'castle-gate' security group
   local_action:
      module: ec2_group
-     name: "{{tag_prefix}}{{castle_gate_name}}"
+     name: "{{castle_gate}}"
      vpc_id: "{{vpc_id}}"
      description: "Web facing services"
      region: "{{aws_region}}"
@@ -51,7 +51,7 @@
        - proto: tcp
          from_port: 22
          to_port: 22
-         group_name: "{{tag_prefix}}{{kitchen_door_name}}"
+         group_name: "{{kitchen_door}}"
      rules_egress:
        - proto: all
          cidr_ip: 0.0.0.0/0
@@ -59,7 +59,7 @@
 - name: Create 'watch-tower' security group
   local_action:
     module: ec2_group
-    name: "{{tag_prefix}}{{watch_tower_name}}"
+    name: "{{watch_tower}}"
     vpc_id: "{{vpc_id}}"
     description: "Email services"
     region: "{{aws_region}}"
@@ -71,7 +71,7 @@
       - proto: tcp
         from_port: 22
         to_port: 22
-        group_name: "{{tag_prefix}}{{kitchen_door_name}}"
+        group_name: "{{kitchen_door}}"
     rules_egress:
       - proto: all
         cidr_ip: 0.0.0.0/0
@@ -79,7 +79,7 @@
 - name: Create 'courtyard' security group
   local_action:
       module: ec2_group
-      name: "{{tag_prefix}}{{courtyard_name}}"
+      name: "{{courtyard}}"
       vpc_id: "{{vpc_id}}"
       description: "Transient workers"
       region: "{{aws_region}}"
@@ -87,11 +87,11 @@
         - proto: tcp
           from_port: 22
           to_port: 22
-          group_name: "{{tag_prefix}}{{kitchen_door_name}}"
+          group_name: "{{kitchen_door}}"
         - proto: tcp
           from_port: 80
           to_port: 80
-          group_name: "{{tag_prefix}}{{castle_gate_name}}"
+          group_name: "{{castle_gate}}"
       rules_egress:
         - proto: all
           cidr_ip: 0.0.0.0/0
@@ -99,7 +99,7 @@
 - name: Create 'vault' security group
   local_action:
      module: ec2_group
-     name: "{{tag_prefix}}{{vault_name}}"
+     name: "{{vault}}"
      vpc_id: "{{vpc_id}}"
      description: "LDAP and SQL Databases"
      region: "{{aws_region}}"
@@ -107,27 +107,27 @@
        - proto: tcp
          from_port: 22
          to_port: 22
-         group_name: "{{tag_prefix}}{{kitchen_door_name}}"
+         group_name: "{{kitchen_door}}"
        - proto: tcp
          from_port: 5432
          to_port: 5432
-         group_name: "{{tag_prefix}}{{castle_gate_name}}"
+         group_name: "{{castle_gate}}"
        - proto: tcp
          from_port: 636
          to_port: 636
-         group_name: '{{tag_prefix}}{{castle_gate_name}}'
+         group_name: '{{castle_gate}}'
        - proto: tcp
          from_port: 636
          to_port: 636
-         group_name: "{{tag_prefix}}{{kitchen_door_name}}"
+         group_name: "{{kitchen_door}}"
        - proto: tcp
          from_port: 636
          to_port: 636
-         group_name: "{{tag_prefix}}{{courtyard_name}}"
+         group_name: "{{courtyard}}"
        - proto: tcp
          from_port: 636
          to_port: 636
-         group_name: "{{tag_prefix}}{{watch_tower_name}}"
+         group_name: "{{watch_tower}}"
      rules_egress:
        - proto: all
          cidr_ip: 0.0.0.0/0
