--- a/playbooks/roles/createiamroles/tasks/castle-gate.yml
+++ b/playbooks/roles/createiamroles/tasks/castle-gate.yml
@@ -2,14 +2,14 @@
 - name: Create 'castle-gate' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam create-role --role-name {{tag_prefix}}{{castle_gate_name}} --assume-role-policy-document "file://roles/createiamroles/files/assume-role-policy.json"
+      aws --region {{aws_region}} iam create-role --role-name {{castle_gate}} --assume-role-policy-document "file://roles/createiamroles/files/assume-role-policy.json"
 
 - name: Create 'castle-gate' instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam create-instance-profile --instance-profile-name {{tag_prefix}}{{castle_gate_name}}-profile
+      aws --region {{aws_region}} iam create-instance-profile --instance-profile-name {{castle_gate}}-profile
 
 - name: Adding 'castle-gate' role to instance-profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam add-role-to-instance-profile --role-name {{tag_prefix}}{{castle_gate_name}} --instance-profile-name {{tag_prefix}}{{castle_gate_name}}-profile
+      aws --region {{aws_region}} iam add-role-to-instance-profile --role-name {{castle_gate}} --instance-profile-name {{castle_gate}}-profile
