--- a/playbooks/roles/createiamroles/tasks/main.yml
+++ b/playbooks/roles/createiamroles/tasks/main.yml
@@ -8,7 +8,7 @@
 #- name: Create 'kitchen-door' role
 #  local_action:
 #     module: iam
-#     name: "{{tag_prefix}}{{kitchen_door_name}}"
+#     name: "{{kitchen_door}}"
 #     iam_type: role
 #     state: present
 #
