--- a/playbooks/roles/createinstances/tasks/kitchen-door.yml
+++ b/playbooks/roles/createinstances/tasks/kitchen-door.yml
@@ -3,11 +3,11 @@
   local_action:
     module: ec2
     key_name: "{{key_name}}"
-    group: "{{tag_prefix}}{{kitchen_door_name}}"
+    group: "{{kitchen_door}}"
     instance_type: "t2.small"
     image: "{{ami_id}}"
     region: "{{aws_region}}"
-    instance_profile_name: "{{tag_prefix}}kitchen-door-profile"
+    instance_profile_name: "{{kitchen_door}}-profile"
     volumes:
       - device_name: /dev/sda1
         volume_size: 16
