--- a/playbooks/roles/createvpc/tasks/main.yml
+++ b/playbooks/roles/createvpc/tasks/main.yml
@@ -24,7 +24,9 @@
     cidr: {{dbs_subnet_cidr}}
     resource_tags:
       Name: Database Subnet
-  register: database_subnet
+  register: dbs_subnet
+
+- lineinfile: "dest=group_vars/dynamic regexp='^dbs_subnet_id:' line='dbs_subnet_id: {{dbs_subnet.subnet_id}}'"
 
 - name: Create subnet for web servers
   ec2_vpc_subnet:
