--- a/playbooks/roles/deleteiamroles/tasks/courtyard.yml
+++ b/playbooks/roles/deleteiamroles/tasks/courtyard.yml
@@ -2,18 +2,18 @@
 - name: Remove 'courtyard' role from instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}courtyard-profile --role-name {{tag_prefix}}{{courtyard_name}}
+      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{courtyard}}-profile --role-name {{courtyard}}
   ignore_errors: True
 
 - name: Delete 'courtyard' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{courtyard_name}}
+      aws --region {{aws_region}} iam delete-role --role-name {{courtyard}}
   ignore_errors: True
 
 - name: Delete 'courtyard' Instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{courtyard_name}}-profile
+      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{courtyard}}-profile
   ignore_errors: True
 
