--- a/playbooks/roles/createwebinstances/tasks/main.yml
+++ b/playbooks/roles/createwebinstances/tasks/main.yml
@@ -18,15 +18,16 @@
     vpc_subnet_id: "{{web_subnet_id}}"
     assign_public_ip: yes
     key_name: "{{key_name}}"
-    instance_type: "{{instance_type}}"
+    instance_type: "t2.small"
     instance_profile_name: "{{castle_gate}}-profile"
     image: "{{ami_id}}"
     region: "{{aws_region}}"
+    zone: "{{aws_zone}}"
     volumes:
       - device_name: /dev/sda1
-        device_type: standard
-        volume_size: 8
         delete_on_termination: true
+        volume_size: 12
+        device_type: gp2
     wait: yes
     user_data: "{{ lookup('template', '../templates/web-cloud-init-script.j2') }}"
     instance_tags:
