--- a/share/playbooks/roles/startelasticsearchinstance/tasks/main.yml
+++ b/share/playbooks/roles/startelasticsearchinstance/tasks/main.yml
@@ -15,6 +15,8 @@
     region: "{{aws_region}}"
   register: instances
 
+- debug: msg="elasticsearch-host={{instances.instances[0].public_dns_name}}"
+
 - route53:
     command: create
     zone: "ec2.internal."
