waits for http service

--- a/share/playbooks/roles/create_base_web/tasks/ami.yml
+++ b/share/playbooks/roles/create_base_web/tasks/ami.yml
@@ -1,9 +1,11 @@
 # Create the AMI.
 
 - name: Wait for configuration of EC2 instance completed
-  local_action:
-    module: command
-      ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i {{lookup('env', 'HOME')}}/.ssh/{{key_name}} fedora@{{web_base.instances[0].public_ip}} sh -c "'while [ ! -f /home/fedora/.web-done ]; do sleep 30; done'"
+  wait_for:
+    delay: 540
+    host: "{{web_base.instances[0].public_ip}}"
+    port: 80
+    state: started
 
 - name: Register AMI for front-end web servers
   local_action:
@@ -15,6 +17,5 @@
     wait: yes
   register: web_ami
 
-- debug: msg="{{web_ami}}"
-
+# Records the ami-id is the set of dynamic variables for other playbooks.
 - lineinfile: "dest=group_vars/dynamic regexp='^web_ami_id:' line='web_ami_id: {{web_ami.image_id}}'"
